FIX: small fix of alignment

--- a/client/src/scss/types/loading.scss
+++ b/client/src/scss/types/loading.scss
@@ -34,7 +34,7 @@
   .cms-content-loading-spinner {
     .spinner {
       height: 36px !important;
-      top: 7px !important;
+      top: 4px !important;
       width: 36px !important;
       margin-top: 0;
       right: 28px !important;
